cabal-version:       2.4
-- Initial package description 'haddock-internal-libraries.cabal' generated
--  by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                haddock-internal-libraries
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
extra-source-files:  CHANGELOG.md

library internal-sig
  signatures:          B.Sig
  exposed-modules:     C
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      internal-sig
  default-language:    Haskell2010

library internal-impl
  exposed-modules:     B
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      internal-impl
  default-language:    Haskell2010

library
  mixins:              internal-sig requires (B.Sig as B)
  reexported-modules:  B, C
  exposed-modules:     A
  build-depends:       base ^>=4.12.0.0
                     , internal-impl
                     , internal-sig
  hs-source-dirs:      src
  default-language:    Haskell2010
